WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
320473
REGRESSION(
314501@main
): On flights.google.com, can't use backspace to delete airport from box
https://bugs.webkit.org/show_bug.cgi?id=320473
Summary
REGRESSION(314501@main): On flights.google.com, can't use backspace to delete...
Sammy Gill
Reported
2026-07-28 10:31:38 PDT
Steps to reproduce: 1. Ideally, start from a new tab 2. Go to flights.google.com 3. Click on the from box (leftmost box) 4. Click on the "+" button on the right of the box 5. Press backspace once to remove the default choice 6. Observe that the choice got removed, but the cursor stays at the same place.
Attachments
Add attachment
proposed patch, testcase, etc.
Sammy Gill
Comment 1
2026-07-28 10:31:48 PDT
rdar://183391399
Sammy Gill
Comment 2
2026-07-28 11:37:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/70366
EWS
Comment 3
2026-07-28 14:37:30 PDT
Committed
318095@main
(3b267afd25f0): <
https://commits.webkit.org/318095@main
> Reviewed commits have been landed. Closing PR #70366 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug