REGRESSION(314501@main): On flights.google.com, can't use backspace to delete airport from box https://bugs.webkit.org/show_bug.cgi?id=320473 rdar://183391399

Unreviewed, reverting 314501@main (a8c7730a75ef)

Reverted change:

    GitHub.com: emoji reaction touches code box in comment.
    https://bugs.webkit.org/show_bug.cgi?id=312152
    rdar://174652842
    314501@main (a8c7730a75ef)

Canonical link: https://commits.webkit.org/318095@main